--- a/Source/PetCare/PetCare/PetCare.csproj
+++ b/Source/PetCare/PetCare/PetCare.csproj
@@ -599,6 +599,12 @@
     <Compile Include="TiepTan\TT_main.Designer.cs">
       <DependentUpon>TT_main.cs</DependentUpon>
     </Compile>
+    <Compile Include="TiepTan\Usc\Frm_TT6_ChonKhuyenMai.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TiepTan\Usc\Frm_TT6_ChonKhuyenMai.Designer.cs">
+      <DependentUpon>Frm_TT6_ChonKhuyenMai.cs</DependentUpon>
+    </Compile>
     <Compile Include="TiepTan\Usc\Usc_TT10_LSKham.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -936,6 +942,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TiepTan\TT_main.resx">
       <DependentUpon>TT_main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TiepTan\Usc\Frm_TT6_ChonKhuyenMai.resx">
+      <DependentUpon>Frm_TT6_ChonKhuyenMai.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TiepTan\Usc\Usc_TT10_LSKham.resx">
       <DependentUpon>Usc_TT10_LSKham.cs</DependentUpon>
